# predictions

./: .env  .gitignore  .gitmodules  README.md  classification_models.py  clean_predictions.py  data_acquisition.py  data_processing.py  data_visualizing.py  domain_predictions_template.py  explainability.py  feature_extraction.py  log_files.py  main.py  metrics.py  navigator_generation_models.py  non_prediction_template.txt  pipeline.py  pipelines.py  pre_processing.py  prediction_properties.py  prediction_properties.txt  prediction_template.txt  prediction_template_refactored.py  prompt_strategies.md  prompts.py  pyproject.toml  read_log_file.ipynb  real_data_acquisition.py  requirements.txt  rnn.py  rnn_utils.py  similarity_scores.py  testing_a_push.txt  text_generation_models.py  vector_stores.py
.ipynb_checkpoints/: data_processing-checkpoint.py  pyproject-checkpoint.toml  text_generation_models-checkpoint.py
bash_scripts/: tense_extraction_and_classification.sh  train_ml_models-synthetic.sh  train_ml_models-trial.sh  train_ml_models.sh
data/: two_models-non_predictions.csv  two_models-predictions.csv
misc/: 0-spacy_pipeline.ipynb  activation_functions.ipynb  exs_for_paper.ipynb  label_prediction.ipynb  predictionTasksChart.vsdx  read_log_file.ipynb  rnn.ipynb  similarity_of_text.ipynb  update_ner_pos_extraction.ipynb
misc_experiments/: certify_with_llms.ipynb  classical_dimensionality_reduction.ipynb  cosine_similarity_scratch.ipynb  exs_for_paper.ipynb  extract_features_by_variable_type.ipynb  extract_features_get_similarity.ipynb  hugging_face_text_generation_models.ipynb  inspect_climate_fever_dataset.ipynb  ner_frequency.ipynb  predictions_words  pyerini_query.ipynb  similarity_of_text.ipynb  term_document_matrix.ipynb
notebook_experiments/: (dev)_Dep_Con_SRL_Demos.ipynb  0-spacy_pipeline.ipynb  1-generate_predictions_langchain-refactored.ipynb  1-predictions_to_df_with_prediction_properties.ipynb  1-test_new_generation_models.ipynb  27_First_RAG_Pipeline-Copy1.ipynb  27_First_RAG_Pipeline.ipynb  33_Hybrid_Retrieval.ipynb  5-models_and_evaluation.ipynb  activation_functions.ipynb  analysis_of_generated_data.ipynb  analyze_property_extraction_y_vs_llm.ipynb  annotators.ipynb  averaging_classification_report.ipynb  basic_knowledge_graph.ipynb  certify_with_llms.ipynb  class_weight_scikit_learn.ipynb  co-occurrenceEx.ipynb  combine_llm_classifiers_output.ipynb  convert_properties_to_1s_and_0s.ipynb  csv_to_txt.ipynb  entailment.ipynb  (+66 more)
(+257 files in other folders)
