[project]
name = "predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "azureopenai>=0.0.1",
    "cython>=3.1.1",
    "d2l>=0.17.0",
    "dotenv>=0.9.9",
    "groq>=0.22.0",
    "huggingface>=0.0.1",
    "hydra-core>=1.3.2",
    "ipdb>=0.13.13",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "keras>=3.9.2",
    "langchain-core>=0.3.55",
    "llama-index>=0.12.36",
    "nltk>=3.9.1",
    "numpy>=2.1.3",
    "ollama>=0.4.8",
    "omegaconf>=2.3.0",
    "openai>=1.75.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydot>=3.0.4",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "setuptools>=80.7.1",
    "spacy>=3.8.5",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
